# kaggle-ventilator-model

./: .gitignore  README.md  pyproject.toml
examples/: Data Exploration.ipynb
ventilatormodels/: __init__.py
ventilatormodels/abstract_model/: abstract_model.py
ventilatormodels/datautils/: __init__.py  data_formatting.py
ventilatormodels/lstm_regressor/: __init__.py  lstm_regressor.py
ventilatormodels/simple_regressor/: __init__.py  simple_regressor.py
ventilatormodels/variational_lstm_regressor/: __init__.py  variational_lstm_regressor.py
